--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -82,3 +82,17 @@
   publisher={Vision},
   preview={wave-mechanics.gif}
 }
+
+@article{panakkal_sensing_2023,
+author = {Pranavesh Panakkal  and Elisa S. M. Fattoracci  and Jamie E. Padgett  and Danielle D. King  and Teddi Yoo },
+title = {Sensing Flooded Roads to Support Roadway Mobility during Flooding: A Web-Based Tool and Insights from Needs Assessment Interviews},
+journal = {Natural Hazards Review},
+volume = {24},
+number = {4},
+pages = {04023039},
+year = {2023},
+doi = {10.1061/NHREFO.NHENG-1753},
+URL = {https://ascelibrary.org/doi/abs/10.1061/NHREFO.NHENG-1753},
+eprint = {https://ascelibrary.org/doi/pdf/10.1061/NHREFO.NHENG-1753},
+}
+
