--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -86,13 +86,21 @@
 @article{panakkal_sensing_2023,
 author = {Pranavesh Panakkal  and Elisa S. M. Fattoracci  and Jamie E. Padgett  and Danielle D. King  and Teddi Yoo },
 title = {Sensing Flooded Roads to Support Roadway Mobility during Flooding: A Web-Based Tool and Insights from Needs Assessment Interviews},
+abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
 journal = {Natural Hazards Review},
 volume = {24},
 number = {4},
 pages = {04023039},
 year = {2023},
 doi = {10.1061/NHREFO.NHENG-1753},
-URL = {https://ascelibrary.org/doi/abs/10.1061/NHREFO.NHENG-1753},
 eprint = {https://ascelibrary.org/doi/pdf/10.1061/NHREFO.NHENG-1753},
+url={https://ascelibrary.org/doi/abs/10.1061/NHREFO.NHENG-1753},
+html={https://ascelibrary.org/doi/abs/10.1061/NHREFO.NHENG-1753},
+pdf={example_pdf.pdf},
+altmetric={248277},
+dimensions={true},
+selected={true}
+publisher={Vision},
+preview={wave-mechanics.gif}
 }
 
