--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -86,7 +86,7 @@
 @article{panakkal_sensing_2023,
 author = {Pranavesh Panakkal  and Elisa S. M. Fattoracci  and Jamie E. Padgett  and Danielle D. King  and Teddi Yoo },
 title = {Sensing Flooded Roads to Support Roadway Mobility during Flooding: A Web-Based Tool and Insights from Needs Assessment Interviews},
-abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
+abstract = {Reliable sensing of roadway conditions during flooding is a long-standing, challenging problem with societal importance for roadway safety. Tools that provide real-time data on road conditions during floods can facilitate safer mobility, reduce vehicle-related drownings, enhance flood response efficiency, and support emergency response decision-making. Following the tenets of user-centered design, such tools ideally should address the needs of diverse stakeholders involved in flood response. Currently, the existing literature lacks a thorough understanding of stakeholder needs to guide situational awareness tool development in the area of roadway mobility during flood events. This paper addresses this gap by studying the needs of stakeholders responsible for managing flood response in Houston. Semi structured one-on-one interviews were conducted with stakeholders from different Houston-based organizations responsible for managing and responding to flood hazard events in the downtown metropolitan area. Interview responses were systematically analyzed to identify (1)\&nbsp;data needs for facilitating efficient and safe emergency response, (2)\&nbsp;the most and least valuable information available during flooding, (3)\&nbsp;communication and visualization strategies, (4)\&nbsp;factors influencing stakeholder trust, and (5)\&nbsp;factors influencing occupational stress during flood response. Finally, interview insights were used to develop a conceptual situational awareness framework and a prototype map-based tool that provides real-time road condition data during flood events. This study elucidates vital information for improving existing tools and providing preliminary guidance for future mobility-centric situational awareness tools that promote safer mobility and facilitate emergency response decision-making during flooding. Although the study focused on Houston, insights gained may be useful for comparable flood-prone regions. In developed countries, 40\%–60\% of flood fatalities are attributed to vehicle-related incidents. Flooded roads and lack of real-time road condition data pose safety risks to first responders and reduce emergency response efficiency. Understanding stakeholder needs and developing tools that address them are essential for improving the safety and efficiency of emergency response, especially considering a potential increase in flood risk to urban mobility due to climate change and other factors. Following the tenets of the user-centered design process, this study identified stakeholder needs, conceptualized a framework for sensing road conditions, and developed an open-source prototype tool in the context of flood response in Houston. Insights gained in this study can improve the efficacy of existing mobility-centric situational awareness tools and provide preliminary guidance for quick prototyping of new situational awareness tools. Furthermore, organizations can use the insights presented here to help reduce work-related stress among emergency response personnel, thereby improving emergency response efficiency and organizational resilience. }
 journal = {Natural Hazards Review},
 volume = {24},
 number = {4},
