Fixed publisher error

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -99,7 +99,7 @@ html={https://ascelibrary.org/doi/abs/10.1061/NHREFO.NHENG-1753},
 pdf={example_pdf.pdf},
 altmetric={248277},
 dimensions={true},
-selected={true}
+selected={true},
 publisher={Vision},
 preview={wave-mechanics.gif}
 }
