Added a new button

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -97,10 +97,12 @@ eprint = {https://ascelibrary.org/doi/pdf/10.1061/NHREFO.NHENG-1753},
 url={https://ascelibrary.org/doi/abs/10.1061/NHREFO.NHENG-1753},
 html={https://ascelibrary.org/doi/abs/10.1061/NHREFO.NHENG-1753},
 pdf={example_pdf.pdf},
-altmetric={248277},
+altmetric={true},
 dimensions={true},
 selected={true},
 publisher={Vision},
-preview={wave-mechanics.gif}
+preview={wave-mechanics.gif},
+bibtex_show={true},
+tldr = {This is a short form of this paper},
 }
 
