--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -101,7 +101,6 @@ altmetric={true},
 dimensions={true},
 selected={true},
 preview={wave-mechanics.gif},
-bibtex_show={true},
-tldr = {This is a short form of this paper},
+bibtex_show={false},
 }
 
