--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -100,7 +100,7 @@ pdf={example_pdf.pdf},
 altmetric={true},
 dimensions={true},
 selected={true},
-preview={wave-mechanics.gif},
+preview={https://commons.wikimedia.org/wiki/File:Animation_of_Harvey_approaching_the_Texas_coast.gif},
 bibtex_show={false},
 }
 
