Added additional bibliography

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,3 +21,40 @@ preview={Animation_of_Harvey_approaching_the_Texas_coast.gif},
 bibtex_show={false},
 }
 
+@article{gori2020accessibility,
+  title={Accessibility and recovery assessment of Houston’s roadway network due to fluvial flooding during Hurricane Harvey},
+  author={Gori, Avantika and Gidaris, Ioannis and Elliott, James R and Padgett, Jamie and Loughran, Kevin and Bedient, Philip and Panakkal, Pranavesh and Juan, Andrew},
+  journal={Natural hazards review},
+  volume={21},
+  number={2},
+  pages={04020005},
+  year={2020},
+  publisher={American Society of Civil Engineers}
+}
+
+@inproceedings{panakkal2019towards,
+  title={Towards enhanced response: Integration of a flood alert system with road infrastructure performance models},
+  author={Panakkal, Pranavesh and Juan, Andrew and Garcia, Matthew and Padgett, Jamie E and Bedient, Philip},
+  booktitle={Structures Congress 2019},
+  pages={294--305},
+  year={2019},
+  organization={American Society of Civil Engineers Reston, VA}
+}
+
+@incollection{padgett2022infrastructure,
+  title={Infrastructure impacts and vulnerability to coastal flood events},
+  author={Padgett, Jamie E and Panakkal, Pranavesh and Gonz{\'a}lez-Due{\~n}as, Catalina},
+  booktitle={Coastal Flood Risk Reduction},
+  pages={151--165},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@inproceedings{panakkal2022risk,
+  title={Risk-Informed Decision-Making Framework for Emergency Response During Flooding},
+  author={Panakkal, P and Padgett, JE and Bedient, P},
+  booktitle={13th International Conference on Structural Safety \& Reliability},
+  year={2022}
+}
+
+
