--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,12 +24,19 @@ bibtex_show={false},
 @article{gori2020accessibility,
   title={Accessibility and recovery assessment of Houston’s roadway network due to fluvial flooding during Hurricane Harvey},
   author={Gori, Avantika and Gidaris, Ioannis and Elliott, James R and Padgett, Jamie and Loughran, Kevin and Bedient, Philip and Panakkal, Pranavesh and Juan, Andrew},
+  abstract ={The record-breaking rainfall produced by Hurricane Harvey resulted in catastrophic and prolonged impacts on Houston’s transportation infrastructure, inundating entire neighborhoods and rendering them inaccessible to emergency response services. Harvey highlighted the vulnerability of the roadway network to severe inundation during extreme fluvial flood events and emphasized the need for a detailed roadway network accessibility characterization in order to determine which areas of the city are most vulnerable and sensitive to transportation disruption. This study poses an integrated framework to evaluate fluvial flood impacts on roadway accessibility to emergency services experienced by potentially socially vulnerable populations. This framework is applied to assess the time evolution of road network accessibility during Hurricane Harvey through coupling of observed road closures, flood modeling, and network analysis. Furthermore, by analyzing network disruptions at the census block group level, the correlation between impact severity and social demographics of the affected areas is investigated. This analysis is conducted for two highly populated watersheds within the city of Houston, which have contrasting flood management infrastructure and represent a broad range of demographic groups. This analysis advances understanding of the interactions between flood extent and duration, infrastructure impacts, and community vulnerability by (1) assessing the evolution of network accessibility between emergency service locations and flood-impacted areas, (2) estimating the flood-induced increase of the emergency response travel times of the aforementioned origin-destination pairs, and (3) highlighting potential correlations between physical and social vulnerability.},
   journal={Natural hazards review},
   volume={21},
   number={2},
   pages={04020005},
+  doi = {10.1061/(ASCE)NH.1527-6996.0000355},
+  url={https://ascelibrary.org/doi/abs/10.1061/%28ASCE%29NH.1527-6996.0000355},
   year={2020},
-  publisher={American Society of Civil Engineers}
+  publisher={American Society of Civil Engineers},
+  altmetric={true},
+  dimensions={true},
+  preview={Animation_of_Harvey_approaching_the_Texas_coast.gif},
+  bibtex_show={false}, 
 }
 
 @inproceedings{panakkal2019towards,
@@ -57,4 +64,16 @@ bibtex_show={false},
   year={2022}
 }
 
+@article{padgett2018post,
+  title={Post-Harvey Houston-Galveston roadway bridge reconnaissance},
+  author={Padgett, Jamie and Balomenos, Georgios and Gidaris, Ioannis and Ebad Sichani, Majid and Vishnu, Navya and Du, Ao and Bernier, Carl and Misra, Sushreyo and Kameshwar, Sabarethinam and Panakkal, Pranavesh},
+  year={2018},
+  publisher={DesignSafe-CI}
+}
+
+@article{panakkal2022situational,
+  title={Situational awareness frameworks for real-time sensing of flood impacts on road transportation networks},
+  author={Panakkal, Pranavesh},
+  year={2022}
+}
 
