--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,7 +30,7 @@ bibtex_show={false},
   number={2},
   pages={04020005},
   doi = {10.1061/(ASCE)NH.1527-6996.0000355},
-  url={https://ascelibrary.org/doi/abs/10.1061/%28ASCE%29NH.1527-6996.0000355},
+  html={https://ascelibrary.org/doi/abs/10.1061/%28ASCE%29NH.1527-6996.0000355},
   year={2020},
   publisher={American Society of Civil Engineers},
   altmetric={true},
@@ -42,15 +42,22 @@ bibtex_show={false},
 @inproceedings{panakkal2019towards,
   title={Towards enhanced response: Integration of a flood alert system with road infrastructure performance models},
   author={Panakkal, Pranavesh and Juan, Andrew and Garcia, Matthew and Padgett, Jamie E and Bedient, Philip},
+  abstract={This paper presents a conceptual framework for improved situational awareness in severe rainfall events like hurricanes or tropical storms by coupling a flood alert system (FAS) with a model for transportation infrastructure performance assessment referred to as the access to critical facilities (ACF) model. The FAS is a flood modeling and alert system that leverages state of the art flood modeling and rainfall radar data in an efficient manner. The ACF model comprises of a road network of the study area, census data, locations of critical facilities like hospitals and fire stations, and a spatial and network analysis toolbox written in Python. The proposed framework can be used to evaluate, in near real-time, system level performance such as accessibility to critical locations and component level performance such as potential impacts on roadways. As a proof of concept, the coupled framework is applied to the White Oak Bayou watershed, Houston, Texas. First, the hydrologic and hydraulic characteristics of the watershed are captured through inundation maps forming a floodplain map library (FPML). Second, five accessibility measures quantifying mobility and accessibility are evaluated for each inundation map to develop the accessibility map library (AML). During a storm event, real-time radar rainfall data is used to identify the pertinent scenario from the FPML and AML. The selected maps are then communicated to stakeholders to support emergency response and situational awareness. Further, the results from the framework can also be used for disaster mitigation planning. Although demonstrated on a single watershed, the methodology developed in this study is transferrable to other regions to develop an integrated flood alert system in support of emergency response and longer-term resilience goals.},
   booktitle={Structures Congress 2019},
   pages={294--305},
   year={2019},
-  organization={American Society of Civil Engineers Reston, VA}
+  organization={American Society of Civil Engineers Reston, VA},
+  html={https://ascelibrary.org/doi/10.1061/9780784482223.029},
+  altmetric={true},
+  dimensions={true},
+  preview={Animation_of_Harvey_approaching_the_Texas_coast.gif},
+  bibtex_show={false}, 
 }
 
 @incollection{padgett2022infrastructure,
   title={Infrastructure impacts and vulnerability to coastal flood events},
   author={Padgett, Jamie E and Panakkal, Pranavesh and Gonz{\'a}lez-Due{\~n}as, Catalina},
+  abstract={},
   booktitle={Coastal Flood Risk Reduction},
   pages={151--165},
   year={2022},
