--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -56,7 +56,7 @@ bibtex_show={false},
 
 @incollection{padgett2022infrastructure,
   title={Infrastructure impacts and vulnerability to coastal flood events},
-  author={Padgett, Jamie E and Panakkal, Pranavesh and Gonz{\'a}lez-Due{\~n}as, Catalina},
+  author={Padgett, Jamie E. and Panakkal, Pranavesh and Gonz{\'a}lez-Due{\~n}as, Catalina},
   abstract={},
   booktitle={Coastal Flood Risk Reduction},
   pages={151--165},
