Updated the book chapter

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -56,11 +56,15 @@ bibtex_show={false},
 @incollection{padgett2022infrastructure,
   title={Infrastructure impacts and vulnerability to coastal flood events},
   author={Padgett, Jamie E. and Panakkal, Pranavesh and Gonz{\'a}lez-Due{\~n}as, Catalina},
-  abstract={},
+  abstract={This chapter provides an overview of the impacts of coastal flood events, namely, tropical storms and hurricanes, on coastal infrastructure, leveraging examples from industrial and transportation infrastructure. We emphasize the multihazard nature of coastal storm events, producing wind, storm surge, waves, and rainfall, and their impacts on the built environment. Such multihazard events can impair the functionality of infrastructure in the short term due to inundation, as well as over longer periods due to damage requiring repair or replacement. Furthermore, these events can have cascading consequences, such as debris generation or spill of hazardous materials, which affect the health and safety of the public and environment. To illuminate these considerations, case study examples of infrastructure vulnerability and risk analyses are presented from Houston, Texas, United States as well as Rotterdam, the Netherlands. These examples highlight the flood risks to aboveground storage tanks common in port and industrial facilities as well as the risks to transportation infrastructure affecting mobility around the regions. Future opportunities for philosophical shifts in our approach to design and manage infrastructure in flood-prone regions are suggested, emphasizing possibilities for enabling “smart resilience” and for advancing performance-based coastal engineering in temporally evolving coastal settings.},
   booktitle={Coastal Flood Risk Reduction},
   pages={151--165},
   year={2022},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={https://doi.org/10.1016/B978-0-323-85251-7.00012-3},
+  html={https://doi.org/10.1016/B978-0-323-85251-7.00012-3},
+  preview={Hurricane_Ike_NEXRAD_radar_animation.gif},
+  altmetric={true},
 }
 
 @inproceedings{panakkal2022risk,
