--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -63,8 +63,9 @@ bibtex_show={false},
   publisher={Elsevier},
   doi={https://doi.org/10.1016/B978-0-323-85251-7.00012-3},
   html={https://doi.org/10.1016/B978-0-323-85251-7.00012-3},
-  preview={Hurricane_Ike_NEXRAD_radar_animation.gif},
+  preview={Allison_Flood_Houston.jpg},
   altmetric={true},
+  bibtex_show={true},
 }
 
 @inproceedings{panakkal2022risk,
