--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,7 +33,6 @@ bibtex_show={false},
   year={2020},
   publisher={American Society of Civil Engineers},
   altmetric={true},
-  dimensions={true},
   preview={Animation_of_Harvey_approaching_the_Texas_coast.gif},
   bibtex_show={false}, 
 }
@@ -48,7 +47,6 @@ bibtex_show={false},
   organization={American Society of Civil Engineers Reston, VA},
   html={https://ascelibrary.org/doi/10.1061/9780784482223.029},
   altmetric={true},
-  dimensions={true},
   preview={Animation_of_Harvey_approaching_the_Texas_coast.gif},
   bibtex_show={false}, 
 }
@@ -93,3 +91,9 @@ bibtex_show={false},
   year={2022}
 }
 
+@phdthesis{panakkal2022situational,
+  author  = {Panakkal, Pranavesh},
+  title   = "",
+  school  = "",
+  year    = ""
+}
