Added bio for my thesis

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,6 +20,18 @@ preview={Animation_of_Harvey_approaching_the_Texas_coast.gif},
 bibtex_show={false},
 }
 
+% 2022
+
+@phdthesis{panakkal2022situational,
+  author  = {Panakkal, Pranavesh},
+  title   = {Situational awareness frameworks for real-time sensing of flood impacts on road transportation networks},
+  school  = {Rice University},
+  year    = {2022},
+  bibtex_show={true},
+  preview={rice-owl.png},
+  html={https://scholarship.rice.edu/handle/1911/114182},
+}
+
 @incollection{padgett2022infrastructure,
   title={Infrastructure impacts and vulnerability to coastal flood events},
   author={Padgett, Jamie E. and Panakkal, Pranavesh and Gonz{\'a}lez-Due{\~n}as, Catalina},
@@ -45,6 +57,8 @@ bibtex_show={false},
   altmetric={true},
   bibtex_show={true},
 }
+
+#2021
 
 @article{gori2020accessibility,
   title={Accessibility and recovery assessment of Houston’s roadway network due to fluvial flooding during Hurricane Harvey},
@@ -77,10 +91,6 @@ bibtex_show={false},
   bibtex_show={false}, 
 }
 
-
-
-
-
 @article{padgett2018post,
   title={Post-Harvey Houston-Galveston roadway bridge reconnaissance},
   author={Padgett, Jamie and Balomenos, Georgios and Gidaris, Ioannis and Ebad Sichani, Majid and Vishnu, Navya and Du, Ao and Bernier, Carl and Misra, Sushreyo and Kameshwar, Sabarethinam and Panakkal, Pranavesh},
@@ -91,17 +101,4 @@ bibtex_show={false},
   doi={doi:10.17603/DS2HM4H},
   bibtex_show={true},
   preview={relief_harvey.jpg},
-}
-
-@article{panakkal2022situational,
-  title={Situational awareness frameworks for real-time sensing of flood impacts on road transportation networks},
-  author={Panakkal, Pranavesh},
-  year={2022}
-}
-
-@phdthesis{panakkal2022situational,
-  author  = {Panakkal, Pranavesh},
-  title   = "",
-  school  = "",
-  year    = ""
 }
