--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -69,7 +69,7 @@ bibtex_show={false},
   number={2},
   pages={04020005},
   doi = {10.1061/(ASCE)NH.1527-6996.0000355},
-  html={https://ascelibrary.org/doi/abs/10.1061/%28ASCE%29NH.1527-6996.0000355},
+  html={https://doi.org/10.1061/(ASCE)NH.1527-6996.0000355},
   year={2020},
   publisher={American Society of Civil Engineers},
   altmetric={true},
