--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,6 +24,15 @@ bibtex_show={false},
 
 @phdthesis{panakkal2022situational,
   author  = {Panakkal, Pranavesh},
+  abstract={Severe storms and associated flooding pose a significant risk to roadway mobility. Consequently, 40 to 60\% of flood-related deaths are attributed to vehicle-related incidents in developed countries. A real-time situational awareness framework that can sense road conditions can facilitate safer mobility, reduce vehicle-related drownings, enhance flood response efficiency, and support emergency response decision-making. Existing situational awareness tools, which often depend on limited data sources and show acceptable performance in limited case studies, fall short of providing a comprehensive framework for sensing flood impacts on roads. Particularly, opportunities to significantly improve situational awareness by leveraging existing data sources in urban regions remain untapped. This thesis addresses this need by offering new tools, models, methodologies, and frameworks for detecting flood impacts on roads in real time and advances the current state-of-the-art for sensing roadway conditions during floods.
+
+First, this thesis reports results from semi-structured one-on-one needs assessment interviews with stakeholders responsible for managing flood response in Houston. Specifically, it reports situational awareness data needs for facilitating efficient and safe emergency response, most and least valuable information for situational awareness, communication and visualization strategies, and factors influencing stakeholder trust. These insights inform the methodological underpinning of the three situational awareness frameworks proposed in this thesis.
+
+The first situational awareness framework proposed in this thesis senses flood impacts on infrastructure using precompiled maps and real-time rainfall data. The framework offers basic situational awareness information accessible to most communities and is appropriate for areas with limited resources. Relying on precompiled maps to sense real-time flood impacts is often insufficient. This study proposes Open Source Situational Awareness Framework for Mobility (OpenSafe Mobility) to provide a more comprehensive sensing of flood impacts on roads. OpenSafe Mobility uses real-time rainfall data, a physics-based flood model, spatial and network analyses, and vehicle characteristics to sense real-time flood impact on the road transportation system. Case studies using three recent storms in Houston, Texas, demonstrate the framework's ability to provide vehicle-class specific roadway conditions for even minor roads and residential streets--a problem existing approaches struggle with.
+
+While OpenSafe Mobility case studies highlight its ability to model flood impacts, it also provides evidence that depending on only one source for sensing flood impacts is insufficient. An alternative is to leverage multiple sources in a data fusion framework to sense current flood conditions. This thesis proposes Open Source Situational Awareness Framework for Mobility using Data Fusion (OpenSafe Fusion) to take advantage of this opportunity. First, OpenSafe Fusion identifies different data sources that either directly or indirectly observe flooding in the study region. Next, source-specific data collection and processing workflows are developed, leveraging diverse techniques from spatial analysis to deep learning. The observations from the sources are then combined in real-time using data fusion techniques explicitly accounting for data source characteristics. Case studies using recent storms in Houston, Texas, demonstrate the framework's ability to significantly improve situational awareness data availability and provide reliable estimates of road conditions using existing public data sources. Finally, this thesis uses OpenSafe Fusion to develop a new prototype web tool for Houston that provide real-time road conditions data for enhancing mobility-centric situational awareness. The proposed tool addresses essential stakeholder needs identified during needs assessment interviews. 
+
+Overall, this thesis provides new tools, models, methodologies, and frameworks to sense flood impacts on roads in real time and quantify network-level impacts of flooding. Applying the methodologies presented in this thesis will significantly improve situational awareness during flooding. Specifically, it will enable emergency responders and decision-makers to identify flooded roads and safer routes, locate isolated communities, reduce delays and detours, and aid equipment selection. In conclusion, the contributions of this thesis have societal importance in enhancing emergency response efficiency and road safety. These contributions are significant and timely considering the potential increase in flood risk to roadway mobility due to climate change and other factors.},
   title   = {Situational awareness frameworks for real-time sensing of flood impacts on road transportation networks},
   school  = {Rice University},
   year    = {2022},
@@ -49,6 +58,7 @@ bibtex_show={false},
 
 @inproceedings{panakkal2022risk,
   title={Risk-Informed Decision-Making Framework for Emergency Response During Flooding},
+  abstract={Real-time emergency response decision-making (DM) during flooding is a challenging problem. In contrast to the complexity of the problem, current DM frameworks are generally oversimplified and neglect the uncertainty, infrastructure performance and sociodemographics of the region. To address these limitations, this study poses a risk-informed DM framework that integrates situational awareness, exposure, vulnerability, and decision-making. First, real-time flood hazard information is obtained from a proven flood alert system. Next, the hazard data is coupled with performance models to estimate infrastructure performance at the component and network levels. Infrastructure performance is then placed in the context of sociodemographic data to inform decision making. In addition to proposing the integrated framework, this paper will present a case study application in Brays Bayou Watershed, Houston, Texas, USA. By quantifying risk and associated uncertainty, the framework can aid emergency managers seeking to identify high-risk locations and prioritize emergency response.},
   author={Panakkal, Pranavesh and Padgett, Jamie E. and Bedient, Philip},
   booktitle={13th International Conference on Structural Safety \& Reliability},
   year={2022},
