--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -83,7 +83,7 @@ Overall, this thesis provides new tools, models, methodologies, and frameworks t
   year={2020},
   publisher={American Society of Civil Engineers},
   altmetric={true},
-  preview={Animation_of_Harvey_approaching_the_Texas_coast.gif},
+  preview={Postcard_of_Galveston.jpg},
   bibtex_show={false}, 
 }
 
@@ -97,7 +97,7 @@ Overall, this thesis provides new tools, models, methodologies, and frameworks t
   organization={American Society of Civil Engineers Reston, VA},
   html={https://ascelibrary.org/doi/10.1061/9780784482223.029},
   altmetric={true},
-  preview={Animation_of_Harvey_approaching_the_Texas_coast.gif},
+  preview={heavy_rain_flooded_road.jpg},
   bibtex_show={false}, 
 }
 
