--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -37,7 +37,7 @@ Overall, this thesis provides new tools, models, methodologies, and frameworks t
   school  = {Rice University},
   year    = {2022},
   bibtex_show={true},
-  preview={rice_logo.png},
+  preview={Rice_Shield_280_Blue.png},
   html={https://scholarship.rice.edu/handle/1911/114182},
 }
 
