Added a new paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,23 @@
 ---
 ---
 
+@article{PANAKKAL2023130100,
+title = {Safer this way: Identifying flooded roads for facilitating mobility during floods},
+journal = {Journal of Hydrology},
+pages = {130100},
+year = {2023},
+issn = {0022-1694},
+doi = {https://doi.org/10.1016/j.jhydrol.2023.130100},
+url = {https://www.sciencedirect.com/science/article/pii/S0022169423010429},
+author = {Pranavesh Panakkal and Allison M. Wyderka and Jamie E. Padgett and Philip B. Bedient},
+keywords = {Floods, Radar, Urban mobility, Situational awareness, Emergency response, Alert systems},
+abstract = {Severe storms and associated flooding pose a significant risk to urban mobility. Consequently, 40 to 63 percent of flood-related deaths are linked to roadway-related incidents in developed countries. The dynamic nature of flooding and the lack of real-time information make it challenging to sense flooding and its impact on roadways. Hence, existing state-of-the-art methods fall short of providing a robust, reliable, and affordable tool to facilitate situational awareness during storms. Such a tool is indispensable to aid emergency response, especially considering the potential increase in risk to flood exposure due to climate change and other factors. This study addresses this need by providing an open-source framework that couples real-time rainfall data, a physics-based flood model, and network and spatial analyses to sense real-time flood impact on the road transportation system. Case studies using three recent storms in Houston, Texas demonstrate the framework’s ability to provide vehicle-class specific roadway conditions for even minor roads and residential streets—a problem existing approaches struggle with. Aside from road-link conditions, the framework can also estimate network-level flood impacts, such as identifying regions without access to critical facilities like hospitals, giving decision-makers a more holistic view of network performance. Further, the framework is interoperable with existing situational awareness tools and could augment their ability to sense road conditions during flooding. Finally, the proposed framework can equip flood-prone communities and emergency responders with reliable and accessible situational awareness content using open-source tools and data to promote safer mobility during flooding—a key goal of intelligent transportation systems.},
+selected={true},
+preview={Animation_of_Harvey_approaching_the_Texas_coast.gif},
+bibtex_show={false},
+}
+
+
 @article{panakkal_sensing_2023,
 author = {Pranavesh Panakkal  and Elisa S. M. Fattoracci  and Jamie E. Padgett  and Danielle D. King  and Teddi Yoo },
 title = {Sensing Flooded Roads to Support Roadway Mobility during Flooding: A Web-Based Tool and Insights from Needs Assessment Interviews},
