--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,19 @@
 ---
 ---
 
+@article{liu2023island,
+  title={ISLAND: Informing Brightness and Surface Temperature Through a Land Cover-based Interpolator},
+  author={Liu, Yuhao and Panakkal, Pranavesh and Dee, Sylvia and Balakrishnan, Guha and Padgett, Jamie and Veeraraghavan, Ashok},
+  journal={arXiv preprint arXiv:2309.12416},
+  year={2023},
+  html = {https://arxiv.org/abs/2309.12416},
+  abstract={Cloud occlusion is a common problem in the field of remote sensing, particularly for thermal infrared imaging. Remote sensing thermal instruments onboard operational satellites are supposed to enable frequent and high-resolution observations over land; unfortunately, clouds adversely affect thermal signals by blocking outgoing longwave radiation emission from Earth's surface, interfering with the retrieved ground emission temperature. Such cloud contamination severely reduces the set of serviceable thermal images for downstream applications, making it impractical to perform intricate time-series analysis of land surface temperature (LST). In this paper, we introduce a novel method to remove cloud occlusions from Landsat 8 LST images. We call our method ISLAND, an acronym for Informing Brightness and Surface Temperature Through a Land Cover-based Interpolator. Our approach uses thermal infrared images from Landsat 8 (at 30 m resolution with 16-day revisit cycles) and the NLCD land cover dataset. Inspired by Tobler's first law of Geography, ISLAND predicts occluded brightness temperature and LST through a set of spatio-temporal filters that perform distance-weighted spatio-temporal interpolation. A critical feature of ISLAND is that the filters are land cover-class aware, making it particularly advantageous in complex urban settings with heterogeneous land cover types and distributions. Through qualitative and quantitative analysis, we show that ISLAND achieves robust reconstruction performance across a variety of cloud occlusion and surface land cover conditions, and with a high spatio-temporal resolution. We provide a public dataset of 20 U.S. cities with pre-computed ISLAND thermal infrared and LST outputs. Using several case studies, we demonstrate that ISLAND opens the door to a multitude of high-impact urban and environmental applications across the continental United States.},
+  altmetric={true},
+  selected={true},
+  preview={island.png},
+  bibtex_show={false},
+}
+
 @article{PANAKKAL2023130100,
 title = {Safer this way: Identifying flooded roads for facilitating mobility during floods},
 journal = {Journal of Hydrology},
