Uploaded personal copy of the paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -128,6 +128,7 @@ Overall, this thesis provides new tools, models, methodologies, and frameworks t
   altmetric={true},
   preview={heavy_rain_flooded_road.jpg},
   bibtex_show={false}, 
+  pdf={Panakkal2019Towards.pdf},
 }
 
 @article{padgett2018post,
