Added OpenSafe Mobility accepted manuscript

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,6 +28,7 @@ altmetric={true},
 selected={true},
 preview={Houston_flooding,_1973.jpg},
 bibtex_show={false},
+pdf={Panakkal_2023_Safer_this_way.pdf},
 }
 
 @article{panakkal_sensing_2023,
