Added Arxiv pdf

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,7 @@
   selected={true},
   preview={island.png},
   bibtex_show={false},
+  pdf={https://arxiv.org/pdf/2309.12416.pdf},
 }
 
 @article{PANAKKAL2023130100,
