--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -97,6 +97,7 @@ Overall, this thesis provides new tools, models, methodologies, and frameworks t
   preview={flooded_street.jpg},
   altmetric={true},
   bibtex_show={true},
+  pdf={https://par.nsf.gov/servlets/purl/10339921},
 }
 
 #2021
