Accepted manuscript OpenSafe Fusion

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -49,6 +49,7 @@ altmetric={true},
 selected={true},
 preview={Animation_of_Harvey_approaching_the_Texas_coast.gif},
 bibtex_show={false},
+pdf={User_Centered_Design__for_website_personal_copy.pdf},
 }
 
 % 2022
