Added more pdfs

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -86,6 +86,7 @@ Overall, this thesis provides new tools, models, methodologies, and frameworks t
   preview={Allison_Flood_Houston.jpg},
   altmetric={true},
   bibtex_show={true},
+  pdf={Chapter 14_Draft_14Dec2020.pdf},
 }
 
 @inproceedings{panakkal2022risk,
@@ -118,6 +119,7 @@ Overall, this thesis provides new tools, models, methodologies, and frameworks t
   altmetric={true},
   preview={Postcard_of_Galveston.jpg},
   bibtex_show={false}, 
+  pdf={https://www.researchgate.net/profile/Avantika-Gori/publication/338897453_Accessibility_and_Recovery_Assessment_of_Houston's_Roadway_Network_due_to_Fluvial_Flooding_during_Hurricane_Harvey/links/5e3191a6a6fdccd96574f146/Accessibility-and-Recovery-Assessment-of-Houstons-Roadway-Network-due-to-Fluvial-Flooding-during-Hurricane-Harvey.pdf},
 }
 
 @inproceedings{panakkal2019towards,
