Added pdf to my thesis

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -71,6 +71,7 @@ Overall, this thesis provides new tools, models, methodologies, and frameworks t
   bibtex_show={true},
   preview={rice.png},
   html={https://scholarship.rice.edu/handle/1911/114182},
+  pdf={https://repository.rice.edu/bitstreams/137577f8-8138-4015-86cb-3fb341b75202/download},
 }
 
 @incollection{padgett2022infrastructure,
