Updating OpenSafe Fusion

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,21 @@
 ---
 ---
 
+@article{panakkal2024more,
+  title={More eyes on the road: Sensing flooded roads by fusing real-time observations from public data sources},
+  author={Panakkal, Pranavesh and Padgett, Jamie Ellen},
+  journal={Reliability Engineering \& System Safety},
+  pages={110368},
+  year={2024},
+  publisher={Elsevier},
+  abstract = {Reliable sensing of road conditions during flooding can facilitate safe and efficient emergency response, reduce vehicle-related fatalities, and enhance community resilience. Existing situational awareness tools typically depend on limited data sources or simplified models, rendering them inadequate for sensing dynamically evolving roadway conditions. Consequently, roadway-related incidents are a leading cause of flood fatalities (40%–60%) in many developed countries. While an extensive network of physical sensors could improve situational awareness, they are expensive to operate at scale. This study proposes an alternative—a framework that leverages existing data sources, including physical, social, and visual sensors and physics-based models, to sense road conditions. It uses source-specific data collection and processing, data fusion and augmentation, and network and spatial analyses workflows to infer flood impacts at link and network levels. A limited case study application of the framework in Houston, Texas, indicates that repurposing existing data sources can improve roadway situational awareness. This framework offers a paradigm shift for improving mobility-centric situational awareness using open-source tools, existing data sources, and modern algorithms, thus offering a practical solution for communities. The paper’s contributions are timely: it provides an equitable framework to improve situational awareness in an epoch of climate change and exacerbating urban flood risk.},
+altmetric={true},
+selected={true},
+preview={fusion_method.pdf},
+bibtex_show={false},
+pdf={Panakkal_2024_OpenSafe_Fusion.pdf},
+}
+
 @article{liu2023island,
   title={ISLAND: Informing Brightness and Surface Temperature Through a Land Cover-based Interpolator},
   author={Liu, Yuhao and Panakkal, Pranavesh and Dee, Sylvia and Balakrishnan, Guha and Padgett, Jamie and Veeraraghavan, Ashok},
